# scry

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: ci.build.yml  ci.fmt.yml  ci.lint.yml  format.yml  lint.yml
src/: main.rs
src/api/: cache.rs  factory.rs  fallback.rs  mod.rs  mtgio.rs  scryfall.rs  traits.rs  types.rs
src/calculator/: algorithms.rs  analyzer.rs  cmc_weighted.rs  mod.rs  simple.rs
src/cli/: args.rs  commands.rs  curve_display.rs  interactive.rs  mod.rs  synergy_display.rs
src/curve/: analyzer.rs  mana_bridge.rs  mod.rs  types.rs
src/deck/: builder.rs  formats.rs  mod.rs  types.rs
src/export/: curve_report.rs  json.rs  markdown.rs  mod.rs  synergy_report.rs
src/input/: decklist.rs  mod.rs  moxfield.rs  text_parser.rs
src/llm/: anthropic.rs  client.rs  factory.rs  mod.rs  ollama.rs  openai.rs  prompt.rs  traits.rs  types.rs
src/synergy/: detector.rs  keywords.rs  mod.rs  themes.rs  types.rs
